Adds ability to select cards

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,3 +1,5 @@
 $color-white: #fff;
-$color-light-gray: #e6e6e6;
-$color-medium-gray: #b3b3b3;
+$color-light-gray: #f2f2f2;
+$color-medium-gray: #e6e6e6;
+$color-dark-gray: #b3b3b3;
+$color-darker-gray: #8c8c8c;
