--- a/src/css/_card.scss
+++ b/src/css/_card.scss
@@ -2,8 +2,9 @@
 
 .card {
   background-color: $color-white;
-  border: 1px solid $color-medium-gray;
+  border: 1px solid $color-dark-gray;
   border-radius: 5px;
+  cursor: pointer;
   display: inline-block;
 
   text-align: center;
@@ -11,6 +12,15 @@
   margin: 10px;
   padding: 5px 0;
   width: 200px;
+
+  &.hover {
+    background-color: $color-light-gray;
+    border: 1px solid $color-darker-gray;
+  }
+
+  &.selected {
+    box-shadow: 5px 5px 5px $color-dark-gray;;
+  }
 
   .card__element {
     padding: 5px;
