Added fonts, messaging, and skeleton for game controls

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -3,3 +3,15 @@ $color-light-gray: #f2f2f2;
 $color-medium-gray: #e6e6e6;
 $color-dark-gray: #b3b3b3;
 $color-darker-gray: #8c8c8c;
+
+$color-light-red: #e46363;
+$color-red: #e43e3e;
+$color-dark-red: #b11313;
+
+$color-light-green: #509d2f;
+$color-green: #2b8d00;
+$color-dark-green: #174d00;
+
+$color-light-purple: #6133cc;
+$color-purple: #390f9d;
+$color-dark-purple: #1a0746;
