Finds all possible sets on board for original set rules

--- a/src/css/_table.scss
+++ b/src/css/_table.scss
@@ -36,7 +36,8 @@
     margin: 50px 0;
 
     .sets-found,
-    .cards-remaining {
+    .cards-remaining,
+    .sets-remaining {
       margin: 10px 0;
     }
 
